Implemented markdown messaging, immune to XSS

--- a/yesod-chatapp.cabal
+++ b/yesod-chatapp.cabal
@@ -49,3 +49,5 @@ executable         yesod-chatapp
                  , yesod-auth-hashdb             >= 1.4.2
                  , pwstore-fast                  >= 2.0
                  , stm                           >= 2.4        && < 3.0
+                 , markdown                      >= 0.1.13     && < 0.2
+                 , blaze-html                    >= 0.8.1.1    && < 0.9
